tests/valid/valid_basic_schema.csl
config Basic {
  name: string;
  enabled: boolean;
  retries?: number;
}
