tests/invalid/invalid_identifier_starts_with_digit.csl
config InvalidIdent {
  1abc: number;
}
